# revista-sigilosa

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT_WORKFLOW.md  INIT_DATA_GUIDE.md  Makefile  POSTGRES_SETUP.md  PROMPT_CODEX.md  QUICKSTART.md  README.md  docker-compose.yml  init_data.json  sonido_sigiloso.db
migrations/: 20260227000100_init.sql  20260227000200_update_tracks.sql  20260227000300_add_tone_constraint.sql  20260227000400_add_album_metadata.sql
scripts/: import_seed.sh  show_migrations.sh
src/: db.rs  init.rs  main.rs  models.rs  routes.rs
templates/: home.html
